force-app/main/observability/objects/Agent_Log__c/Agent_Log__c.object-meta.xml
<CustomObject>
    <description>Logs of LLM Agents</description>
    <label>Agent Log</label>
    <nameField>
        <label>Agent Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>