force-app/main/observability/objects/Agent_Log__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>Unique ID of agent</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID of agent</inlineHelpText>
    <label>Agent Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>