force-app/main/observability/objects/Agent_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Error message if agent failed</description>
    <inlineHelpText>Error message if agent failed</inlineHelpText>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>