force-app/main/observability/objects/Agent_Log__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <description>JSON serialized list of events</description>
    <label>Events</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>