force-app/main/observability/objects/Agent_Log__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>The objective or user input to the agent</description>
    <label>Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>