force-app/main/observability/objects/Agent_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>The result of the invocation</description>
    <inlineHelpText>The result of the invocation</inlineHelpText>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>