force-app/main/observability/objects/Agent_Log__c/fields/Suspension_State__c.field-meta.xml
<CustomField>
    <fullName>Suspension_State__c</fullName>
    <description>State that can be used to rehydrate the agent after it has been suspended</description>
    <inlineHelpText>State that can be used to rehydrate the agent after it has been suspended</inlineHelpText>
    <label>Suspension_State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>